--- a/_posts/2022-04-10-5CNN.md
+++ b/_posts/2022-04-10-5CNN.md
@@ -31,7 +31,7 @@
 
 ​	卷积层(Convolution Layer)通常用作对输入层输入数据进行特征提取，通过卷积核矩阵对原始数据中隐含关联性的一种抽象。卷积操作原理上其实是对两张像素矩阵进行点乘求和的数学操作，其中一个矩阵为输入的数据矩阵，另一个矩阵则为卷积核（滤波器或特征矩阵），求得的结果表示为原始图像中提取的特定局部特征。图5.1表示卷积操作过程中的不同填充策略，上半部分采用零填充，下半部分采用有效卷积（舍弃不能完整运算的边缘部分）。
 ​                                                 
-![conv-same](https://limu111.github.io/_posts/img/ch5/convolution.png)
+![conv-same](https://limu111.github.io/img/ch5/convolution.png)
 
 ​                                                        图5.1 卷积操作示意图
 
